# homework11.2

./: .coverage  .env  .env.example  .gitignore  README.md  feature.txt  main.py  masks.py  mylog.txt  pyproject.toml  test_api.py  test_decorators.py  test_requests.py  utils.py
data/: operations.json
htmlcov/: .gitignore  class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_transaction_reader_csv_xlsx_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  exemple.py  external_api.py  generators.py  log.py  masks.py  processing.py  transaction_reader_csv_xlsx.py  utils.py  widget.py
src/data/: transactions.json
tests/: test_api.py  test_decorators.py  test_demo.py  test_external_api.py  test_generators.py  test_log.py  test_main.py  test_masks.py  test_processing.py  test_requests.py  test_transaction_reader_csv_xlsx.py  test_utils.py  test_widget.py
