[tool.poetry]
name = "educational-bank"
version = "0.1.0"
description = ""
authors = ["Timur Gorashchenko <timyr98239718@mail.ru>"]
readme = "README.md"
package-mode = false  # Отключаем установку как пакета

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.2"
openpyxl = "^3.1.5"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = [
    'venv',
    'tests'
]

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py
)
'''

[tool.isort]
line_length = 119